name:                lambda-paste
version:             0
copyright:           2018 Chris Done
build-type:          Simple
cabal-version:       >=1.10

executable lambda-paste
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yesod
                     , text
                     , time
                     , persistent
                     , persistent-postgresql
                     , resourcet
                     , resource-pool
                     , monad-logger
                     , conduit
                     , mtl
                     , highlighting-kate
                     , blaze-html
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/lambda-paste
